--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SeyonUI</title>
   <base href="/ui/">
-  <meta name="description" content="Finace App with GST">
+  <meta name="description" content="Finance App with GST">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
