--- a/deployUI/index.html
+++ b/deployUI/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>SeyonUI</title>
-  <base href="/ui/">
-  <meta name="description" content="Finance App with GST">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-  
-</script>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><title>SeyonUI</title><base href="/ui/"><meta name="description" content="Finance App with GST"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="/favicon.ico"><link href="styles.ee53dc407f22c9d1b7b8.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.515ed9df1f4876ab6cb6.bundle.js"></script><script type="text/javascript" src="scripts.d860829319a3b2629026.bundle.js"></script><script type="text/javascript" src="main.7c127a8cb56b690f3bf6.bundle.js"></script></body></html>
