Vendor screen completion

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-  <div class="show-sidebar" id="show-sidebar">
+  <!-- <div class="show-sidebar" id="show-sidebar">
     <a><i class="fa fa-bars"></i></a>
-  </div>
+  </div> -->
   <app-root></app-root>
 </body>
 
