--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SeyonUI</title>
-  <base href="/ui/">
+  <base href="/">
   <meta name="description" content="Finance App with GST">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
